test/functions/vass/best-fns-in-diff-modules.good
best-fns-in-diff-modules.chpl:23: In function 'main':
best-fns-in-diff-modules.chpl:25: error: the best ref and const ref overloads are in different modules
best-fns-in-diff-modules.chpl:6: note: the best ref overload is here
best-fns-in-diff-modules.chpl:12: note: the best const ref overload is here
